--- a/twitterclone/templates/home.html
+++ b/twitterclone/templates/home.html
@@ -1,3 +1,8 @@
+    <style>
+        body {
+            background-color: rgb(232, 252, 245);
+        }
+    </style>
 {% extends "basetemp.html" %}
 
 {% block title %}
